# langserve-demo

./: .env_example  Makefile  README.md  client.ipynb  requirements.txt
llm-services/: README.md  pyproject.toml
llm-services/app/: server.py
